src/components/Gallery/Gallery.module.css
.gallery {
  width: 100%;
}

.mainImageContainer {
  position: relative;
  width: 100%;
  height: 300px;
  margin-bottom: 20px;
  border-radius: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.mainImageContainer img {
  cursor: pointer;
}
.thumbnails {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}
.thumbnails img:hover {
  cursor: pointer;

}

.thumbnailContainer {
  position: relative;
  height: 150px;
  overflow: hidden;
  border-radius: 8px;
}
.thumbnailContainer:hover {
  transform: scale(.9);
}

.modalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.modalContent {
  position: relative;
  width: 70%;
  height: 70%;
  background-color: #fff;
  border-radius: 10px;
  overflow: hidden;
}

.gallery button {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: #333;
  color: #fff;
  border: none;
  padding: 5px 10px;
  border-radius: 5px;
  cursor: pointer;
}

